 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc1

 - [ZBX-2982] added ip and port of zabbix server in dashboard widget "Status of Zabbix" (Vedmak)
 - [ZBX-2964] fixed processes failing to start when no IPv6 is available on the system (asaveljevs,Sasha)
 - [ZBX-2977] fixed removing unused records in node_cksum table; thanks to Łukasz Reszka (Sasha)
 - [ZBX-2946] fixed building from FreeBSD ports with libexecinfo installed; thanks to Dmitry Yakovlev (asaveljevs)
 - [ZBX-2957] changed mime type for downloadable locale file (Vedmak)
 - [ZBX-2493] fixed obsolete macro used by default; start using different subject and message for default action messages (Richlv)
 - [ZBX-2976] fixed server crash when performing zabbix[items_unsupported] under DebugLevel=4 (asaveljevs)
 - [ZBX-2950] added popup menus for map elements (Vedmak)
 - [ZBX-2967] added filter for hosts configuration screen (Vedmak)
 - [ZBX-2969] improved SQL statement for synchronizing of nodes; thanks to Łukasz Reszka (Sasha)
 - [ZBX-2962] fixed template macro update (Vedmak)
 - [ZBX-2572] added configuration define for zapcat compatibility mode (Vedmak)
 - [ZBX-2690] added validation for screens xml (Vedmak)
 - [ZBX-2942] increased minimum interval for ICMP pings to 20 ms; thanks to nelsonab (asaveljevs)
 - [ZBX-2945] email sender now knows how to handle multiline responses from SMTP servers (asaveljevs)
 - [ZBXNEXT-360] zabbix_sender now allows "-" for default hostname in input files; thanks to Dennis Jacobfeuerborn (asaveljevs)
 - [ZBX-1908] fixed file and socket descriptors leaking to child processes; thanks to Dan Horak (asaveljevs)